<resources>
    <string name="app_name">bytheway</string>
    <string name="button_send">Отправить</string>
    <integer name="com_vk_sdk_AppId">6427726</integer>

    <string name="fullname">Andrey Petrov</string>
    <string name="type_money"> </string>
    <string name="money">Бюджет поездки</string>
    <string name="description">Описание поездки</string>
    <string name="city">Город проживания</string>
    <string name="drawer_item_map_search">Поиск попутчиков</string>
    <string name="drawer_item_profile">Профиль</string>
    <string name="drawer_item_allusers">Все пользователи</string>
    <string name="title_activity_menu"><font size="20">bytheway</font></string>

    <string name="city_end">Пункт назначения</string>
    <string name="name_button_search">Поиск попутчиков</string>
    <string name="city_start">Пункт отправления</string>
    <string name="city_fromSmall"><font size="13">Откуда</font></string>
    <string name="city_toSmall"><font size="13">Куда</font></string>
    <string name="city_from">Откуда</string>
    <string name="city_to">Куда</string>
    <string name="date_from">Дата</string>
    <string name="date_to">Дата</string>
    <string name="method_move">Способ передвижения</string>
    <string name="budget">1000 </string>
    <string name="budgetName">Бюджет</string>
    <string name="add_info_profile">Дополнительная информация</string>
    <string name="date">Дата</string>
    <string name="sex">Пол</string>
    <string name="name">Имя</string>
    <string name="default_phone_code">+7</string>
    <string name="gender_male">М</string>
    <string name="gender_female">Ж</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти</string>
    <string name="search_users_text">Поиск</string>
    <string name="text_away_from_profile">Сохранить измененные данные?</string>
    <string name="fill_required_fields">Пожалуйста заполните обязательные поля:</string>
    <string name="fill_phone_invalid">Неверный формат телефона</string>
    <string name="fill_diff_cities">Города не должны совпадать</string>
    <string name="fill_all_location">Не выбраны пункты</string>
    <string name="fill_from_location">Не выбран пункт отправления</string>
    <string name="fill_to_location">Не выбран пункт назначения</string>
    <string name="social_links">Ссылки на социальные сети</string>
    <string name="error_update">Ошибка обновления</string>
    <string name="just_error">Ошибка c сервером. Может попозже?</string>
    <string name="text_confirm_remove_trip">Все изменения будет потеряны. \nВы действительно хотите удалить поездку?</string>
    <string name="sex_and_age">Пол, возраст</string>
    <string name="age">Возраст</string>
    <string name="add_new_trip">+ Создать поездку</string>
    <string name="app_in_the_air">App in the Air</string>
    <string name="personal_flight_assistant">Personal flight assistant</string>
    <string name="app_sinchronized">Синхронизация с App in the Air</string>
    <string name="text_sinch_app_air">Для автоматического создания поездок и быстрого поиска попутчиков мы можем добавить ваши рейсы  из приложения App in the Air.</string>
    <string name="sinch_button">СИНХРОНИЗИРОВАТЬ</string>
    <string name="miss">пропустить</string>
    <string name="hint_all_travelers_description">Если Вы захотите присоединиться к другим путешествиям, можете использовать этот экран. Фильтр поможет Вам :)</string>
    <string name="close_hint">ДАЛЕЕ</string>

    <string-array name="months_array">
        <item>янв</item>
        <item>фев</item>
        <item>март</item>
        <item>апр</item>
        <item>май</item>
        <item>июнь</item>
        <item>июль</item>
        <item>авг</item>
        <item>сен</item>
        <item>окт</item>
        <item>ноя</item>
        <item>дек</item>
    </string-array>

    <string name="air_next_profile">Перейти в профиль</string>
    <string name="text_air_succesful_add">Ваши поездки успешно добавлены !</string>
    <string name="exampleCity">Берлин - Москва</string>

    <string name="travelCar">Машина</string>
    <string name="travelTrain">Поезд</string>
    <string name="travelBus">Автобус</string>
    <string name="travelPlane">Самолет</string>
    <string name="travelHitchHicking">Автостоп</string>
    <string name="feedback_writte">Напишите отзыв или предложение</string>
    <string name="add_new_trip_from_app_in_the_air">+ Добавить поездку  App in the Air</string>
    <string name="feedback">Обратная связь</string>
    <string name="textBodyDisaster">Мы не смогли найти ваши предстоящие поездки.</string>
    <string name="textHeadAirDisaster">Ваш аккаунт синхронизирован!</string>
    <string name="item_all_users_empty_date"> </string>
    <string name="filters_all_users_empty_date">____</string>
    <string name="not_cities">Пока ничего не ищет</string>
    <string name="optionSearch">+ Параметры поиска</string>
    <string name="to">до</string>
    <string name="from">от</string>
    <string name="social_text">Добавьте Ваши контактные данные, чтобы другие путешественники смогли найти Вас</string>
    <string name="save_succesfull">Профайл успешно изменен</string>
    <string name="cancel">Отмена</string>
    <string name="any">Любой</string>
    <string name="native_city">Родной город</string>
    <string name="remove">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="year_born">Возраст</string>
    <string name="dates_has_been_incorrect">даты оказались некорректными, попробуйте ввести их снова</string>
    <string name="lastname">Фамилия</string>
    <string name="feedback_text1">Мы будем Вам благодарны  за оставленный отзыв.</string>
    <string name="feedback_text2">Вместе мы сделаем наше приложение лучше! :)</string>
    <string name="email">Ваша почта</string>
    <string name="hint_all_travelers">Все путешественники</string>
    <string name="hint_create_travel">Создайте поездку!</string>
    <string name="hint_create_travel_description">Введите максимум информации для эффективного поиска попутчиков, и чтобы другие пользователи смогли найти Вас :)</string>
    <string name="hint_save_and_search">Сохраняйте и находите!</string>
    <string name="hint_save_and_search_description">При нажатии на кнопку “СОХРАНИТЬ”, внесенные изменения о поездке автоматически сохранятся в Вашем профиле. Вы можете продолжить поиск попутчиков без сохранения поездки..</string>
    <string name="no_internet">У вас нет интернет соединения</string>
    <string name="date_empty">* пользователь не указал даты поездки</string>
    <string name="error_sinchronized">Очень жаль.... Но не получилось синхронизироваться с app in the air.</string>
    <string name="this_date_is_not_set">Дата еще не установлена.</string>
    <string name="copy_done">Скопировали</string>
    <string name="search_change">Ваша поездка будет изменена.</string>
    <string name="search_change_text1">Вы уверены, что хотите сохранить текущую информацию?</string>
    <string name="registration_error">В данный момент приложение поддерживает только вход через Google Account. И сейчас видать что-то не получилось.\nПроверьте интернет и запустите приложение заново.</string>
    <string name="tips_for_blank_social">Привет! Мы обнаружили, что Вы создали поездку и собираетесь искать попутчика, но не указали свои контактные данные. Советуем добавить ссылки на вк, номер в whatsapp или ник для телеграмма.</string>
    <string name="ok_I_understand">Хорошо, я понял.</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="to_date">по</string>
    <string name="from_in">c</string>
    <string name="city_in_the_world">Человек мира</string>
    <string name="error_upload">Ошибка загрузки</string>
    <string name="error_link_open">Мы не смогли открыть ссылку. Возможно она некорректная.</string>
    <string name="last_see">Последний раз был</string>
    <string name="sms_code">Код из sms</string>
    <string name="connect">Подключиться</string>
    <string name="phone">Телефон</string>
    <string name="alternate_entry">Если проблема не в отсутствии интернета, то войдите с помощью номера телефона (не забудьте указать код вашей страны), на который будет отправлено SMS о подтверждении.</string>
    <string name="attention">Внимание</string>
    <string name="add_city">+ Добавить город</string>
    <string name="remove_city">Удалить город</string>
    <string name="traveller">Путешественник</string>
    <string name="notification_user_searching"> искал маршрут, схожий с вашим на 90%!</string>
    <string name="countries">стран</string>
    <string name="plainhours">в полете</string>
    <string name="km">км</string>
    <string name="immortal">Бессмертный</string>
    <string name="very_long">Очень давно</string>
    <string name="email_send">Отправка письма. Выберите почтовый клиент</string>
    <string name="without_name">Путешественник</string>
    <string name="social_text_vk">Добавьте свой аккаунт VK, чтобы с Вами смогли связаться другие путешественники</string>
    <string name="social_title_vk">Vkontakte</string>
    <string name="social_title_wp">WhatsApp</string>
    <string name="social_text_wp">Добавьте свой номер телефона, чтобы с Вами смогли связаться другие путешественники</string>
    <string name="sinch_vk">Синхронизация с помощью приложение</string>
    <string name="share_friends">Рассказать друзьям</string>
    <string name="social_title_tg">Telegram</string>
    <string name="social_text_tg">Добавьте свой аккаунт Telegram, чтобы с Вами смогли связаться другие путешественники</string>
    <string name="call_me">Попросить связаться с вами</string>
    <string name="request_done">Запрос был отправлен. Пользователь получит push уведомление.</string>
    <string name="this_user_search_you">С вами хочет связаться этот путешественник.</string>
    <string name="click_for_copy">Нажмите, что бы, скопировать</string>
    <string name="text_for_soc_link_user">У вас нет контактов, добавьте их здесь:</string>
    <string name="or">или</string>
    <string name="text_for_empty_search">С такими параметрами сюда никто не едет. \nПопробуйте ввести другие параметры запроса.</string>
    <string name="error_registration">Попробуйте авторизоваться еще раз или через какое-то время. Google.com не отвечает.</string>
    <string name="many_request">Many request to server. Waite 5 min</string>
    <string name="invalid_sms">Неправильный смс-код.</string>
    <string name="problem_google_acc">\"Проблемы с гугл аккаунтом\"</string>
    <string name="problem_with_this_way_authorization">Проблемы с этим способом регистрации</string>

</resources>
