<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:paddingEnd="28dp"
        android:paddingStart="28dp"
        android:text="@string/feedback_text1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textFeedback2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingEnd="28dp"
        android:paddingStart="28dp"
        android:text="@string/feedback_text2"
        android:textAlignment="center" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputFeedback"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:theme="@style/WhiteButton" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelButton"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_alignEnd="@+id/textView3"
        android:layout_margin="8dp"
        android:text="@string/button_send"
        android:theme="@style/WhiteButton" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFeedback2"
        android:layout_marginTop="28dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailText"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView5"
            android:layout_alignTop="@+id/textInputLayout2"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/feedback_writte"
            android:nextFocusForward="@id/sendButton" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>