<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sinch_margin_left"
        android:layout_marginTop="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_air_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sinch_margin_left"
            android:text="@string/app_in_the_air" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sinch_margin_left"
        android:layout_marginTop="32dp"
        android:text="@string/app_sinchronized"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="@dimen/sinch_margin_left"
        android:layout_marginTop="24dp"
        android:text="@string/text_sinch_app_air"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:src="@drawable/guys" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/sinch_margin_left">

        <Button
            android:id="@+id/button_sinch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/sinch_button"
            android:theme="@style/WhiteButton" />

        <Button
            android:id="@+id/button_miss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/miss"
            android:theme="@style/WhiteButton" />
    </LinearLayout>

</LinearLayout>