<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sinch_margin_left"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_air_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/logo"
            android:text="@string/app_in_the_air"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/logo"
            android:text="@string/personal_flight_assistant"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sinch_margin_left"
        android:layout_marginTop="32dp"
        android:text="@string/textHeadAirDisaster"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:visibility="invisible"
        android:src="@drawable/plane_air_app" />



    <TextView
        android:id="@+id/city_from_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:text="@string/textBodyDisaster" />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/sinch_margin_left">

        <Button
            android:id="@+id/button_miss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/air_next_profile"
            android:theme="@style/WhiteButton" />
    </RelativeLayout>

</LinearLayout>