<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/travelledStatistics"
    android:background="@color/colorPrimary"
    android:paddingBottom="24dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/textCityFrom"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="24dp"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:text="@string/city_fromSmall"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textDateFrom"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:text="@string/date_from"
        android:textColor="@color/colorTextGrey"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/textCityFrom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textCityFrom"
        app:layout_constraintTop_toBottomOf="@+id/textCityFrom" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_circles_dot"
        app:layout_constraintEnd_toStartOf="@+id/textCityTo"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toEndOf="@+id/textCityFrom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCityTo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/city_toSmall"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/dateArrived"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:text="@string/date_to"
        android:textColor="@color/colorTextGrey"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/textCityTo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textCityTo"
        app:layout_constraintTop_toBottomOf="@+id/textCityTo" />
</android.support.constraint.ConstraintLayout>